packages/styles/src/panel.scss
@use "sass:map";

@import "./new-settings";
@import "./mixins";

$block: #{$fd-namespace}-panel;

.#{$block} {
  --fdPanel_Header_Width: 100%;
  --fdPanel_Header_Height: 2.75rem;
  --fdPanel_Flex_Direction: column;

  &,
  &__content,
  &__title,
  &__header,
  &__expand {
    @include fd-reset();
  }

  @include fd-flex(var(--fdPanel_Flex_Direction));

  &:not(:last-child) {
    margin-block-end: var(--fdPanel_Margin_Bottom);
  }

  &__header {
    @include fd-flex-vertical-center();

    overflow: hidden;
    border-bottom: var(--sapGroup_TitleBorderWidth) solid var(--fdPanel_Header_Border_Color, var(--sapGroup_TitleBorderColor));
    width: var(--fdPanel_Header_Width);
    min-width: var(--fdPanel_Header_Width);
    height: var(--fdPanel_Header_Height);
    min-height: var(--fdPanel_Header_Height);
    top: var(--fdPanel_Header_Position_Top, unset);
    background-color: var(--sapGroup_TitleBackground);
    position: var(--fdPanel_Header_Position, relative);
    padding-inline: var(--fdPanel_Header_Padding_Inline_Start, 0) var(--fdPanel_Header_Padding_Inline_End, 0.5rem);
    border-radius: var(--fdPanel_Header_Border_Top_Left_Radius, var(--fdPanel_Border_Radius)) var(--fdPanel_Header_Border_Top_Right_Radius, var(--fdPanel_Border_Radius)) var(--fdPanel_Header_Border_Bottom_Right_Radius, 0) var(--fdPanel_Header_Border_Bottom_Left_Radius, 0);

    &:has(.#{$block}__button[aria-expanded="false"]) {
      --fdPanel_Header_Border_Bottom_Left_Radius: var(--fdPanel_Border_Radius);
      --fdPanel_Header_Border_Bottom_Right_Radius: var(--fdPanel_Border_Radius);
    }
    
    &:has(.#{$fd-namespace}-toolbar) {
      --fdPanel_Header_Padding_Inline_End: 0;
    }

    &:not(:has(.#{$block}__button)) {
      --fdPanel_Header_Padding_Inline_Start: 0.75rem;
    }
  }

  &__title {
    @include fd-typography(var(--sapGroup_Title_FontSize));
    @include fd-ellipsis();

    flex: 1;
    width: 100%;
    max-width: 100%;
    font-size: var(--fdPanel_Title_Font_Size);
    padding-inline-start: 0.25rem;
  }

  &__content {
    @include fd-scrollbar(var(--fdScrollbar_Border_Radius));

    overflow: auto;
    padding-inline: var(--fdPanel_Content_Padding_Inline, 1rem);
    padding-block: var(--fdPanel_Content_Padding_Block, 0.625rem);
    background: var(--fdPanel_Content_Background_Color);
    border-bottom: solid 0.0625rem var(--fdPanel_Content_Border_Bottom_Color);
    border-radius: var(--fdPanel_Content_Border_Top_Left_Radius, 0) var(--fdPanel_Content_Border_Top_Right_Radius, 0) var(--fdPanel_Content_Border_Bottom_Right_Radius, var(--fdPanel_Border_Radius)) var(--fdPanel_Content_Border_Bottom_Left_Radius, var(--fdPanel_Border_Radius));

    &[aria-hidden="true"] {
      display: none;
    }

    &--no-padding {
      --fdPanel_Content_Padding_Inline: 0;
      --fdPanel_Content_Padding_Block: 0;
    }
  }

  &__expand {
    @include fd-flex-center();

    width: 2.75rem;
    height: var(--fdPanel_Header_Height);
    min-height: var(--fdPanel_Header_Height);
  }

  &__button {
    font-size: 1rem;

    @include fd-rtl() {
      .sap-icon--slim-arrow-right {
        transform: rotate(180deg);
      }
    }
  }

  &--fixed {
    --fdPanel_Header_Padding_Inline_Start: 1rem;
  }

  &--sticky {
    --fdPanel_Header_Position: sticky;
    --fdPanel_Header_Position_Top: 0;
  }

  &--borderless {
    --fdPanel_Header_Border_Color: transparent;
  }

  &--transparent {
    --fdPanel_Content_Background_Color: transparent;
  }

  @include fd-compact-or-condensed() {
    --fdPanel_Header_Height: 2.5rem;
  }
}

